--- a/SpoutStereoServer.vcxproj
+++ b/SpoutStereoServer.vcxproj
@@ -315,12 +315,24 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="CourierNew-32.spritefont" />
+    <None Include="packages.config" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="frontwall-stereowindow.txt" />
+    <Text Include="spout-stereo-config-ivlab-cave-bottomhalf.txt" />
+    <Text Include="spout-stereo-config-ivlab-cave-frontwall.txt" />
+    <Text Include="spout-stereo-config-ivlab-cave.txt" />
+    <Text Include="spout-stereo-config-ivlab-cave-tophalf.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="packages\directxtk_desktop_win10.2024.1.1.1\build\native\directxtk_desktop_win10.targets" Condition="Exists('packages\directxtk_desktop_win10.2024.1.1.1\build\native\directxtk_desktop_win10.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\directxtk_desktop_win10.2024.1.1.1\build\native\directxtk_desktop_win10.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\directxtk_desktop_win10.2024.1.1.1\build\native\directxtk_desktop_win10.targets'))" />
+  </Target>
 </Project>
